--- a/Index.html
+++ b/Index.html
@@ -1,10 +1,21 @@
-html
+
+
+```html
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta http-equiv="refresh" content="0; URL='ordonnance.html'" />
-  </head>
-  <body>
-    <p>Redirection en cours...</p>
-  </body>
+<html lang="fr">
+<head>
+  <meta charset="UTF-8">
+  <title>Ordonnance Médicale</title>
+</head>
+<body>
+  <h1>Ordonnance du Dr. Samuel</h1>
+  <p>Patient : Jean Dupont</p>
+  <p>Médicaments prescrits :</p>
+  <ul>
+    <li>Paracétamol 500mg - 3x par jour</li>
+    <li>Ibuprofène 400mg - si douleur</li>
+  </ul>
+  <p>Date : 03/01/2026</p>
+</body>
 </html>
+ 
